--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
     "vue-router": "^3.0.1"
